# delicious-nbdev

./: README.md  index.html  listings.json  pyproject.toml  robots.txt  sandwich.html  search.json  sitemap.xml
blog/: index.html  index.xml
blog/colab/: bllm2_process_text.html
blog/posts/2022-11-11-alien-vs.-ghost-pt2/: index.html
blog/posts/2022-11-12-live_coding1/: index.html
blog/posts/2022-11-14-live_coding2/: index.html
blog/posts/2022-11-15-live_coding3/: index.html
blog/posts/2022-11-16-live_coding4/: index.html
blog/posts/2022-11-27-live_coding5/: index.html
blog/posts/2022-11-30-live_coding6/: index.html
blog/posts/2022-12-03-live_coding7/: index.html
blog/posts/2022-12-06-paddy1/: index.html
blog/posts/2022-12-07-saving_jupyter_config/: index.html
blog/posts/2023-02-19-MNIST_FastAI/: index.html
blog/posts/2023-02-20-MNIST_base/: index.html
blog/posts/2023-02-25-MNIST_NN/: index.html
blog/posts/2023-03-05-Fruit_Multi_pt1/: index.html
blog/posts/2023-03-05-Fruit_Multi_pt2/: index.html
blog/posts/2023-07-08-Hugging-Face-Features/: index.html
blog/posts/2023-08-25-Callbacks/: index.html
blog/posts/2023-08-30-Learner_part_1/: index.html
delicious_nbdev/: Sandwich.py  _modidx.py  app.py
nbs/: 00_sandwich.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
nbs/blog/: index.qmd
site_libs/bootstrap/: bootstrap-369442557d502a0956069afa1f45b105.min.css  bootstrap-6419f70a81389935f6d2fa66333a2f17.min.css  bootstrap-c5903abefd3952150399c8373d877b6d.min.css  bootstrap-fcf4fd144b26b5b3c0ed403a4af2e1a3.min.css
(+75 files in other folders)
